Checks the github-actions

--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -71,7 +71,7 @@
         </mat-expansion-panel>
         <mat-expansion-panel>
             <mat-expansion-panel-header>
-                <mat-panel-title> Geppetto demo Applications</mat-panel-title>
+                <mat-panel-title> Geppetto demo model Applications</mat-panel-title>
             </mat-expansion-panel-header>
             <p>No Projects Available.</p>
         </mat-expansion-panel>
