--- a/generator/services/Angular-gen-ManagerV10/templates/ComponentTs.handlebars
+++ b/generator/services/Angular-gen-ManagerV10/templates/ComponentTs.handlebars
@@ -49,34 +49,7 @@ export class {{ GpOptions.className }} implements OnInit {
 {{#each GpCodeToAdd.flows_info }}
     {{ flowName }}() {
         this.{{ ../GpOptions.screenName }}Service.{{ flowName }}({{ parameterName }}).subscribe(data => {
-        {{!-- GpCreate --}}
-        {{#ifCond flowName '==' 'GpCreate'}}
-        {{#each field}}
-            {{../entityName}}.{{name}} = '';
-        {{/each}}
-        {{/ifCond}}
-        {{!-- GpUpdate --}}
-        {{#ifCond flowName '==' 'GpUpdate'}}
-        {{#each field}}
-            {{../entityName}}.{{name}} = '';
-        {{/each}}
-        {{/ifCond}}
-        {{!-- GpGetNounById --}}
-        {{#ifCond flowName '==' 'GpGetNounById'}}
-            {{entityName}} = data;
-        {{/ifCond}}
-        {{!-- GpDelete --}}
-        {{#ifCond flowName '==' 'GpDelete'}}
-           this.GpGetNounById();
-        {{/ifCond}}
-        {{!-- GpSearch --}}
-        {{#ifCond flowName '==' 'GpSearch'}}
-           this.rowData = data;
-        {{/ifCond}}
-        {{!-- GpGetAllValues --}}
-        {{#ifCond flowName '==' 'GpGetAllValues'}}
-           this.rowData = data;
-        {{/ifCond}}
+            {{{ body }}}
         },
         error => {
             console.log('Error', error);
@@ -85,13 +58,7 @@ export class {{ GpOptions.className }} implements OnInit {
 {{/each}}
 {{#each GpCodeToAdd.route_info }}
     {{ flowName }}({{ parameterName }}) {
-    {{#ifCond flowName '==' 'GpRoute'}}
-        {{objectName}}.navigate(['{{navigationUrl}}'], { queryParams: { 'id': queryId } });
-    {{/ifCond}}
-    {{#ifCond flowName '==' 'onSelectionChanged'}}
-        const selectedRows = this.gridApi.getSelectedRows();
-        this.GpRoute(selectedRows[0]._id);
-    {{/ifCond}}
+        {{{ body }}}
     }
 {{/each}}
 }
