completed refactoring index.html file

--- a/generator/services/Angular-Template-managerV10/templates/IndexHtml.handlebars
+++ b/generator/services/Angular-Template-managerV10/templates/IndexHtml.handlebars
@@ -1,15 +1,19 @@
+
+
+
 <!doctype html>
 <html lang="en">
-
 <head>
-  {{#each tagData}}
-  { {{tag}} }
+{{#each tagData}}
+{{{data}}}
+{{/each}}
 </head>
-
 <body>
   <app-root></app-root>
-  {{scriptTag}};
+{{#each scriptTagData}}
+{{{data}}}
+{{/each}}
+ 
 </body>
 
 </html>
-{{/each}}
