Fixed the issue of template screen generation

--- a/generator/services/Angular-Template-managerV10/templates/ComponentSpec.handlebars
+++ b/generator/services/Angular-Template-managerV10/templates/ComponentSpec.handlebars
@@ -3,7 +3,7 @@ import { async, ComponentFixture, TestBed } from '@angular/core/testing';
 import { {{GpHeaders.importName}} } from '{{ GpHeaders.importPath }}';
 
 describe('{{GpHeaders.importName}}', () => {
-  let component: FooterComponent;
+  let component: {{GpHeaders.importName}};
   let fixture: ComponentFixture<{{GpHeaders.importName}}>;
 
   beforeEach(async(() => {
