Header component html and ts file generation

--- a/generator/services/Angular-Template-managerV10/templates/ComponentTs.handlebars
+++ b/generator/services/Angular-Template-managerV10/templates/ComponentTs.handlebars
@@ -1,4 +1,4 @@
-import { Component, OnInit } from '@angular/core';
+import { Component, OnInit, Inject } from '@angular/core';
 {{#if GpHeaders}}
 {{#each GpHeaders}}
 import { {{importName}} } from '{{ importPath }}';
@@ -20,13 +20,11 @@ export class {{ GpOptions.className }} implements OnInit {
     {{name}}: {{dataType}}{{#ifCond value '!=' null}} = {{ value }}{{/ifCond}};
 {{/each}}
 {{/if}}
-
 {{#if GpOptions.arrayVariables}}
 {{#each GpOptions.arrayVariables}}
     {{name}}: {{dataType}} = [{{#each value}}{ {{key1}}: '{{value1}}', {{key2}}: '{{value2}}'  },{{/each}}];
 {{/each}}
 {{/if}}
-
 {{#if GpOptions.entities}}
 {{#each GpOptions.entities}}
     public {{ name }} = {
@@ -39,7 +37,6 @@ export class {{ GpOptions.className }} implements OnInit {
 {{#if GpOptions.is_grid_present}}
     {{{ GpOptions.grid_components }}}
 {{/if}}
-
     constructor (
         {{#if GpOptions.constructor}}
         {{#each GpOptions.constructor}}
@@ -51,7 +48,7 @@ export class {{ GpOptions.className }} implements OnInit {
     ngOnInit() {
     {{#if GpCodeToAdd.lifecycle_info}}
     {{#each GpCodeToAdd.lifecycle_info }}
-        {{data}}
+        {{{data}}}
     {{/each}}
     {{/if}}
     }
