--- a/generator/services/Angular-Template-managerV10/templates/ProxyConfig.handlebars
+++ b/generator/services/Angular-Template-managerV10/templates/ProxyConfig.handlebars
@@ -3,7 +3,7 @@ const BACKEND_PORT = process.env.BACKEND_PORT || '8000';
 
 const PROXY_CONFIG = {
     '/api/*': {
-        target: `http://\${BACKEND_URL}:\${BACKEND_PORT}`,
+        target: `http://${BACKEND_URL}:${BACKEND_PORT}`,
         secure: true,
         pathRewrite: {
             '^/api/desktop': '/desktop',
