Added thr translator file generation

--- a/generator/services/Angular-Template-managerV10/templates/SharedService.handlebars
+++ b/generator/services/Angular-Template-managerV10/templates/SharedService.handlebars
@@ -2,7 +2,7 @@ import { Injectable } from '@angular/core';
 import { environment } from '../environments/environment';
 
 @Injectable()
-export class {{sharedObj.className}}Service {
+export class SharedService {
 
      public DESKTOP_API = environment.DESKTOP_API;
     public MOBILE_API = environment.MOBILE_API;
