hide the unused templates and hide shared and sample application modal

--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </mat-expansion-panel>
-        <mat-expansion-panel>
+        <!-- <mat-expansion-panel>
             <mat-expansion-panel-header>
                 <mat-panel-title> Geppetto Sample Applications</mat-panel-title>
             </mat-expansion-panel-header>
@@ -80,7 +80,7 @@
                 <mat-panel-title> Shared Applications </mat-panel-title>
             </mat-expansion-panel-header>
             <p>No Projects Available.</p>
-        </mat-expansion-panel>
+        </mat-expansion-panel> -->
     </mat-accordion>
 </div>
 <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':displayModel}">
