--- a/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/input.handlebars
+++ b/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/input.handlebars
@@ -1,5 +1,5 @@
 <div>
 {{#ifEquals components.type "input"}}
-     <input id="{{components.attributes.id}}" class="{{components.cssClassName}}" {{#if components.attributes.entityDetails.entityName}}[(ngModel)]="{{components.attributes.entityDetails.entityName}}.{{components.attributes.entityDetails.fields.name}}"{{/if}} type="text">      
+     <input id="{{components.attributes.id}}" class="{{components.cssClassName}}" {{#if components.attributes.entityDetails.entityName}}[(ngModel)]="{{components.attributes.entityDetails.entityName}}.{{components.attributes.entityDetails.fields.name}}" [ngModelOptions]="{standalone: true}"{{/if}} type="text">      
 {{/ifEquals}}   
 </div>
