Fixed the issue of translator module generation

--- a/generator/services/Angular-Template-managerV10/templates/TranslatorModule.handlebars
+++ b/generator/services/Angular-Template-managerV10/templates/TranslatorModule.handlebars
@@ -27,7 +27,7 @@ const i18nextOptions = {
   backend: {
     allowMultiLoading: true,
     loadPath: function () {
-      return 'assets/locales/{{lng}}/{{ns}}.json';
+      return 'assets/locales/{{#surroundWithCurlyBraces lng}}{{/surroundWithCurlyBraces}}/{{#surroundWithCurlyBraces ns}}{{/surroundWithCurlyBraces}}.json';
     }
 
   },
