Fixed the issue of asset files generation

--- a/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/button.handlebars
+++ b/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/button.handlebars
@@ -5,7 +5,7 @@
         class="{{buttonData.cssClassName}}"
         name="{{buttonData.name}}" {{#if
         buttonData.flowDetails.verb}}({{buttonData.flowDetails.verb}})="{{buttonData.flowDetails.flowName}}()" {{/if}}
-        >{{buttonData.content}}</button>
+        >{{buttonData.content}}</button>&nbsp;&nbsp;
 
 
 
