css alginment issue fixed

--- a/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/bootstrap-type.handlebars
+++ b/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/bootstrap-type.handlebars
@@ -22,11 +22,12 @@
                     {{/surroundWithCurlyBraces}}</td>
                 {{/each}}
             </tr>
-            <br>
-            <ngb-pagination class="d-flex justify-content-start"
-                [(page)]="page"
-                [maxSize]="5" [rotate]="true" [pageSize]="paginationPageSize"
-                [collectionSize]="rowData.length" [boundaryLinks]="true"></ngb-pagination>
         </tbody>
     </table>
+    <div class="text-right">
+        <ngb-pagination class="d-flex justify-content-start"
+            [(page)]="page"
+            [maxSize]="5" [rotate]="true" [pageSize]="paginationPageSize"
+            [collectionSize]="rowData.length" [boundaryLinks]="true"></ngb-pagination>
+    </div>
 </div>
