table-striped is added and css modify for geppetto template

--- a/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/bootstrap-type.handlebars
+++ b/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/bootstrap-type.handlebars
@@ -1,6 +1,6 @@
-<h2>{{screenName}}</h2>
-<div class="table table-striped" name={{component_name}}>
-    <table id="table" class="table table-bordered" data-show-header="true"
+<div name={{component_name}}>
+    <table id="table" class="table table-bordered  table-striped"
+        data-show-header="true"
         data-pagination="true" data-id-field="name">
         <thead class="table table-hover">
             <tr>
