--- a/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/grid-type.handlebars
+++ b/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/grid-type.handlebars
@@ -1,4 +1,4 @@
-<div class='{{component_class}}' name={{component_name}}{{#if
-    Flowname}} (click)="{{Flowname}}()" {{/if}}>
+<div class='{{component_class}}' name={{component_name}}{{#ifEquals Flowname "GpGetAllValues"}}
+    (click)="GpGetAllValues()" {{/ifEquals}}>
     <ag-grid-angular {{{GRID_HTML}}}></ag-grid-angular>
 </div>
