Fixed the issue of generated login screen

--- a/generator/services/seed/login/login.component.html
+++ b/generator/services/seed/login/login.component.html
@@ -22,7 +22,7 @@
               </span>
             </div>
             <div class="center">
-              <button type="submit" class="btn btn login signup-button-color" (click)="signup(user)">
+              <button type="submit" class="btn btn login signup-button-color" (click)="Login()">
                 {{'source.login' | i18next}}
               </button>
             </div>
