Fixed the issue of login screen and signup screen

--- a/generator/services/seed/login/login.component.scss
+++ b/generator/services/seed/login/login.component.scss
@@ -16,6 +16,11 @@ body {
   margin-top: 10%;
 }
 
+.btn  {
+  background-color: darkblue !important;
+  color: aliceblue !important;
+}
+
 a {
   color: rgba(8, 23, 231, 0.8);
 }
