--- a/generator/services/seed/signup/signup.component.scss
+++ b/generator/services/seed/signup/signup.component.scss
@@ -19,6 +19,11 @@ a {
   color: rgba(8, 23, 231, 0.8);
 }
 
+.btn  {
+  background-color: darkblue !important;
+  color: aliceblue !important;
+}
+
 .background-images {
   background-image: url("../../assets/img/Group2846.png");
   background-attachment: fixed;
