--- a/generator/services/seed/signup/signup.component.html
+++ b/generator/services/seed/signup/signup.component.html
@@ -8,33 +8,52 @@
             <img src="../../assets/img/Group2704.png">
           </div>
           <h3 class="signup-text-color">Please {{'source.register' | i18next}}</h3>
-          <form role="form">
-            <div class="form-group">
-              <label class="signup-text-color">{{'source.firstName' | i18next}}</label>
-              <input type="text" class="form-control" [(ngModel)]="user.firstname" name="user">
-            </div>
-            <div class="form-group">
-              <label class="signup-text-color">{{'source.lastName' | i18next}}</label>
-              <input type="text" class="form-control" [(ngModel)]="user.lastname" name="user">
-            </div>
-            <div class="form-group">
-              <label class="signup-text-color">{{'source.email' | i18next}}</label>
-              <input type="text" class="form-control" [(ngModel)]='user.email' name="user">
-            </div>
-            <div class="form-group">
-              <label class="signup-text-color">{{'source.password' | i18next}}</label>
-              <input type="password" class="form-control" [type]="show ? 'text' : 'password'"
-                [(ngModel)]="user.password" name='user' pw-show-hide="icon">
-              <span class="hideeye">
-                <i [ngClass]="show ? 'fa fa-eye' : 'fa fa-eye-slash'" aria-hidden="true" (click)="hideEye()"></i>
-              </span>
+          <form [formGroup]="signupform">
+            <div formGroupName="signupdata">
+              <div class="form-group">
+                <label class="text">First Name</label>
+                <input type="text" class="form-control center" formControlName="firstname" placeholder="First Name">
+                <span *ngIf="!signupform.get('signupdata.firstname').valid && signupform.get('signupdata.firstname').touched"
+                  class="invalid-feedback">
+                  *Required
+                </span>
+              </div>
+              <div class="form-group">
+                <label class="text">Last Name</label>
+                <input type="text" class="form-control center" formControlName="lastname" placeholder="Last Name">
+                <span *ngIf="!signupform.get('signupdata.lastname').valid && signupform.get('signupdata.lastname').touched"
+                  class="invalid-feedback">
+                  *Required
+                </span>
+              </div>
+              <div class="form-group">
+                <label class="text">Email</label>
+                <input type="email" class="form-control center" formControlName="email" placeholder="Email">
+                <span *ngIf="!signupform.get('signupdata.email').valid && signupform.get('signupdata.email').touched"
+                  class="invalid-feedback">
+                  Must be a valid Email Id
+                </span>
+              </div>
+              <div class="form-group">
+                <label class="text">Password</label>
+                <input type="password" class="form-control center" formControlName="password" placeholder="Password"
+                  [type]="show ? 'text' : 'password'" pw-show-hide="icon" (keyup.enter)="Login()">
+                <div class="input-group-append align-right">
+                  <span class="input-group-text general-input"><img
+                      [src]="show ? '../../assets/img/eyeopen.png' : '../../assets/img/eyeslash.png'" height="20"
+                      (click)="hideEye()" alt="eye" /></span>
+                </div>
+                <span *ngIf="!signupform.get('signupdata.password').valid && signupform.get('signupdata.password').touched"
+                  class="invalid-feedback">
+                  A Password must be 8 character and must have a Uppercase , Lowercase and a Special character
+                </span>
+              </div>
             </div>
             <div class="center">
-              <button type="submit" class="btn btn login signup-button-color" (click)="signup(user)">
+              <button class="btn btn login signup-button-color" (click)="signup()">
                 {{'source.submit' | i18next}}
               </button>
             </div>
-
             <div class="rigister">
               <p class="center signup-text-color">{{'source.alreadyReg' | i18next}}? <a routerLink="/login">{{'source.loginHere' | i18next}}</a></p>
             </div>
