Hide the google and fb login button

--- a/application/clients/desktop/src/app/login/login.component.html
+++ b/application/clients/desktop/src/app/login/login.component.html
@@ -85,7 +85,7 @@
     <div class='container'>
         <div class="row">
             <div class="col-md-6">
-                <button type="button" class="google-button" (click)='googlesigin("google")'>
+                <!-- <button type="button" class="google-button" (click)='googlesigin("google")'>
                     <span class="google-button__icon">
                         <svg viewBox="0 0 366 372" xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -102,15 +102,15 @@
                                 fill="#34A853" /></svg>
                     </span>
                     <span class="google-button__text">Google</span>
-                </button>
+                </button> -->
             </div>
             <div class="col-md-6">
-                <button type="button" class="google-button" (click)='facebooksigin("facebook")'>
+                <!-- <button type="button" class="google-button" (click)='facebooksigin("facebook")'>
                     <span class="google-button__icon">
                         <img style="width:20px" src="../../assets/img/facebook (1).png">
                     </span>
                     <span class="google-button__text">FACEBOOK</span>
-                </button>
+                </button> -->
             </div>
         </div>
     </div>
