Fixed the login and signup issue on generated app

--- a/generator/services/seed/login/login.component.html
+++ b/generator/services/seed/login/login.component.html
@@ -38,7 +38,7 @@
                 {{'source.login' | i18next}}
               </button>
               <div style="color:red; text-align: center">
-                {{errormessage}}
+                {{errorMessage}}
               </div>
             </div>
 
