--- a/generator/services/seed/signup/signup.component.html
+++ b/generator/services/seed/signup/signup.component.html
@@ -37,7 +37,7 @@
               <div class="form-group">
                 <label class="text">Password</label>
                 <input type="password" class="form-control center" formControlName="password" placeholder="Password"
-                  [type]="show ? 'text' : 'password'" pw-show-hide="icon" (keyup.enter)="Login()">
+                  [type]="show ? 'text' : 'password'" pw-show-hide="icon" (keyup.enter)="signup()">
                 <div class="input-group-append align-right">
                   <span class="input-group-text general-input"><img
                       [src]="show ? '../../assets/img/eyeopen.png' : '../../assets/img/eyeslash.png'" height="20"
