home screen background color changed

--- a/generator/services/seed/home/home.component.scss
+++ b/generator/services/seed/home/home.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     height: 100vh;
-    background-color: #867a33;
+    background-color: #73daa1;
     align-items: center;
   }
   .welcome {
