--- a/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/form.handlebars
+++ b/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/form.handlebars
@@ -11,7 +11,7 @@
         <input type="{{type}}" id="{{attributes.id}}" class="{{cssClass}}">
         {{/ifEquals}}
         {{#ifEquals type "textarea"}}
-        <textarea type="text" id="{{attributes.id}}" class="{{cssClass}}"></textarea>
+        <textarea type="text" id="{{attributes.id}}" class="{{cssClass}}" {{#if attributes.entityDetails.entityName}}[(ngModel)]="{{attributes.entityDetails.entityName}}.{{attributes.entityDetails.fields.name}}" [ngModelOptions]="{standalone: true}"{{/if}}></textarea>
         {{/ifEquals}}
         {{#ifEquals type "button"}}
         <button {{#if attributes.type}}type="{{attributes.type}}"{{/if}} id="{{attributes.id}}" {{#if flowDetails.verb}}({{flowDetails.verb}})="{{flowDetails.flowName}}()"{{/if}} class="{{cssClass}}">{{content}}</button>&nbsp;&nbsp;
