--- a/generator/services/seed/signup/signup.component.html
+++ b/generator/services/seed/signup/signup.component.html
@@ -39,9 +39,9 @@
                 <input type="password" class="form-control center" formControlName="password" placeholder="Password"
                   [type]="show ? 'text' : 'password'" pw-show-hide="icon" (keyup.enter)="signup()">
                 <div class="input-group-append align-right">
-                  <span class="input-group-text general-input"><img
+                    <img
                       [src]="show ? '../../assets/img/eyeopen.png' : '../../assets/img/eyeslash.png'" height="20"
-                      (click)="hideEye()" alt="eye" /></span>
+                      (click)="hideEye()" alt="eye" />
                 </div>
                 <span *ngIf="!signupform.get('signupdata.password').valid && signupform.get('signupdata.password').touched || !signupform.get('signupdata.password').valid && submit"
                   class="invalid-feedback">
