--- a/generator/services/seed/signup/signup.component.html
+++ b/generator/services/seed/signup/signup.component.html
@@ -15,7 +15,7 @@
                 <input type="text" class="form-control center" formControlName="firstname" placeholder="First Name">
                 <span *ngIf="!signupform.get('signupdata.firstname').valid && signupform.get('signupdata.firstname').touched || !signupform.get('signupdata.firstname').valid && submit"
                   class="invalid-feedback">
-                  *Required
+                  Must be a valid First Name
                 </span>
               </div>
               <div class="form-group">
@@ -23,7 +23,7 @@
                 <input type="text" class="form-control center" formControlName="lastname" placeholder="Last Name">
                 <span *ngIf="!signupform.get('signupdata.lastname').valid && signupform.get('signupdata.lastname').touched || !signupform.get('signupdata.lastname').valid && submit "
                   class="invalid-feedback">
-                  *Required
+                  Must be a valid Last Name
                 </span>
               </div>
               <div class="form-group">
